# GLutils

./: .gitattributes  CMakeLists.txt  README.md
extlib/glad/: glad.c  glad.h
shaders/: colorFrag.glsl  materialFrag.glsl  materialVert.glsl
src/: fragment.glsl  main.cpp  vertex.glsl
src/glutils/: Renderable.cpp  Renderable.h  Transformable.cpp  Transformable.h
src/glutils/camera/: Camera.cpp  Camera.h
src/glutils/mesh/: Mesh.cpp  Mesh.h  Vertex.h
src/glutils/shader/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/glutils/simpleshapes/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Octahedron.cpp  Octahedron.h  Sphere.cpp  Sphere.h
src/test_mains/: README.md
src/test_mains/test_idea/: CameraTesting.cpp  MouseSelection.cpp  MultipassRendering.cpp  README.md  TransformableTesting.cpp
src/test_mains/test_implement/: CameraTesting.cpp  README.md
